<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/welcome" />

    <EditText
        android:hint="@string/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etMobileNumber"
        android:layout_below="@id/imgLogo"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_border"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textColorHint="#9e9e9e"
        tools:ignore="LabelFor" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:hint="@string/password"
            android:id="@+id/etPassword"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginTop="15dp"
            android:layout_marginRight="30dp"
            android:textSize="20sp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_border"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#9e9e9e" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/buttons"
        android:text="@string/log_in"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtRegisterHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/register_here"
        android:textColor="#000000"
        android:textSize="15sp" />
</RelativeLayout>