<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="40dp"
    tools:context="com.example.logIn.Register">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="Name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"

        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:autofillHints="Phone" />

    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:hint="@string/delivery_address"
        android:inputType="text"
        android:autofillHints="Address" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/edit_text_border"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/buttons"
        android:textColor="#FFFFFF"
        android:text="@string/register"
        android:onClick="welcomeAc"
        tools:ignore="OnClick" />

</LinearLayout>
