<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txtEnterDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:textColor="#000000"
        android:text="@string/forgot_password_details"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:autofillHints="username"
        android:background="@drawable/edit_text_border"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/edit_text_border"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#9e9e9e" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/buttons"
        android:onClick="welcomeAc"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        tools:ignore="OnClick" />
</LinearLayout>